--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&family=Quicksand:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&family=Quicksand:wght@600&family=Tektur:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Merriweather+Sans:wght@300&family=Quicksand:wght@600&family=Tektur:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@1,300;1,500&display=swap');
 
 * {
     margin: 0;
@@ -135,13 +137,15 @@
 
 /************/
 
+/***Seccion marcas***/
 .section__marcas{
     background-color: #1b1d1d;
-    min-height: 80vh;
+    min-height: 90vh;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 
     flex-direction: column;
 }
@@ -151,7 +155,8 @@
     font-size: 2.50rem;
     font-family: 'Quicksand', sans-serif;
 
-    margin-bottom: 15px;
+    margin-top: 100px;
+    margin-bottom: 50px;
 }
 
 .div__marcas{
@@ -169,7 +174,8 @@
 }
 
 .div__secundario__marcas{
-    background-color: rgba(255,200,0,0.75);
+    /*background-color: rgba(255,200,0,0.75);*/
+    background-color: grey;
     border-radius: 20px;
 
     min-height: 400px;
@@ -180,6 +186,8 @@
     margin-right: 30px;
     margin-left: 20px;
     transition: 0.5s;
+
+    flex-wrap: wrap;
 }
 .div__secundario__marcas:hover{
     transform: scale(1.05)
@@ -190,6 +198,244 @@
     width: 280px;
 
     border-radius: 20px;
+}
+/************/
+
+/***Seccion destacado gamer***/
+
+.section__gaming{
+    background-color: #f3f4f5;
+    min-height: 90vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+}
+
+.section__gaming__titulo{
+    color: rgb(5, 5, 5);
+    font-size: 2.50rem;
+    font-family: 'Quicksand', sans-serif;
+
+    margin-bottom: 50px;
+    margin-top: 40px;   
+}
+
+.div__gaming{
+    background-color: grey;
+    border-radius: 30px;
+    box-shadow: 10px 10px 11px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 11px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 11px 0px rgba(3, 3, 3, 0.75);
+    
+    height: 450px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.div__secundario__gaming__hero{
+    background-image: url(../img/img.seccion.gamerSection.jpg);
+    background-clip: padding-box; /* Ajusta el fondo al área de relleno y contenido */
+    background-position: center;
+    background-size: cover;
+
+    min-height: 450px;
+    width: 300px;
+    border-radius: 30px; /* Añade el mismo valor de border-radius que el contenedor principal */
+}
+
+.div__secundario__gaming{
+    background-color: white;
+    border-radius: 20px;
+
+    min-height: 400px;
+    width: 300px;
+
+    display: inline-block;
+    justify-content: center;
+    margin-right: 30px;
+    margin-left: 20px;
+    transition: 0.5s;
+
+    flex-wrap: wrap;
+}
+.div__secundario__gaming:hover{
+    transform: scale(1.05)
+}
+
+.imagenes__gaming{
+    min-height: 300px;
+    width: 280px;
+
+    border-radius: 20px;
+}
+
+.div__secundario__img__gaming{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    /*background-color: #1b1d1d;*/
+}
+
+.div__gaming__valor{
+    color: black;
+    font-size: 1.75rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.div__gaming__tittle{
+    color: grey;
+    font-size: 1.2rem;
+    font-family: 'Montserrat', sans-serif;
+
+    text-align: center;
+}
+/************/
+
+
+/***Seccion destacado gamer***/
+
+.separador__gameOn{
+    margin-bottom: 50px;
+    margin-top: 40px;   
+}
+
+.separador__gameOn__2{
+    border-radius: 50px;
+}
+
+.section__notebook{
+    background-color: #f3f4f5;
+    min-height: 90vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+}
+
+.section__notebook__titulo{
+    color: rgb(5, 5, 5);
+    font-size: 2.50rem;
+    font-family: 'Quicksand', sans-serif;
+
+    margin-bottom: 50px;
+    margin-top: 50px;   
+}
+
+.div_notebook{
+    background-color: grey;
+    border-radius: 30px;
+    box-shadow: 10px 10px 11px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 10px 10px 11px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 11px 0px rgba(3, 3, 3, 0.75);
+    
+    height: 450px;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.div__secundario__notebook__hero{
+    background-image: url(../img/img.seccion.notebookSection.jpg);
+    background-clip: padding-box; /* Ajusta el fondo al área de relleno y contenido */
+    background-position: center;
+    background-size: cover;
+
+    min-height: 450px;
+    width: 300px;
+    border-radius: 30px; /* Añade el mismo valor de border-radius que el contenedor principal */
+}
+
+.div__secundario__notebook{
+    background-color: white;
+    border-radius: 20px;
+
+    min-height: 400px;
+    width: 300px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+    margin-left: 20px;
+    transition: 0.5s;
+
+    flex-wrap: wrap;
+}
+
+.div__secundario__notebook:hover{
+    transform: scale(1.05)
+}
+
+.imagenes__notebook{
+    display: flex;
+    justify-content: center;
+
+    min-height: 280px;
+    width: 290px;
+
+    border-radius: 20px;
+}
+
+.div__secundario__img__notebook{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.div__notebook__valor{
+    color: black;
+    font-size: 1.75rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.div__notebook__tittle{
+    color: grey;
+    font-size: 1.2rem;
+    font-family: 'Montserrat', sans-serif;
+
+    text-align: center;
+}
+/**********/
+
+/*SECCION ITEM-ORDER*/
+
+.item__order{
+    background-color: #FFC800;
+
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px;
+}
+
+.item__order__2{
+    color: black;
+
+    font-family: 'Jost', sans-serif;
+
+    gap: 100px;
+    font-size: 1.40rem;
+}
+
+.item__order__3{
+    color: black;
+
+    font-family: 'Jost', sans-serif;
+
+    display: flex;
+    align-items: center;
+    font-size: 1.20rem;
 }
 /************/
 
@@ -302,3 +548,184 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
+/***************/
+
+/*SECCION CONTACTO👇*/
+
+.section__contacto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 80vh;
+    background-color: #f3f4f5;
+}
+
+.form__contacto{
+    padding: 50px 55px;
+    box-shadow: 0 0 20px rgb(0, 0, 0, 0.4);
+    border-radius: 20px;
+    text-align: center;
+    width: 450px;
+
+    font-family: 'Quicksand', sans-serif;
+
+    background: linear-gradient(to bottom, #ffffff, #ffd700); /* Blanco a dorado */
+}
+
+.contacto__titulo{
+    font-family: 'Quicksand', sans-serif;
+    padding-bottom: 10px;
+
+    font-size: 1.70rem;
+}
+
+.contacto__subtitulo{
+    font-family: 'Quicksand', sans-serif;
+    padding-bottom: 10px;
+
+    color: #ddad00;
+}
+
+.form__div{
+    display: flex;
+    flex-direction: column;
+}
+
+.input__contacto{
+    padding: 10px 15px 10px 15px;
+    border-radius: 10px;
+
+    margin-bottom: 10px;
+
+    color: black;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.input__contacto::placeholder {
+    font-family: 'Quicksand', sans-serif;
+}
+
+.div__politicas{
+    display: flex;
+
+    padding-bottom: 10px;
+}
+
+.input__contacto__2{
+    font-family: 'Quicksand', sans-serif;
+    padding: 10px 15px 10px 15px;
+    border-radius: 10px;
+
+    margin-bottom: 10px;
+
+    transition: 0.3s;
+}
+.input__contacto__2:hover{
+    background-color: black;
+    color: white;
+}
+
+
+/*SECCION FOOTER👇*/
+
+.footer{
+    background-color: #1b1d1d;
+    min-height: auto;
+}
+
+.container__footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    text-align: center;
+
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.div__left__footer{
+
+}
+
+.footer__tittles{
+    font-size: 1.10rem;
+    color: #31a20f;
+    font-family: 'Quicksand', sans-serif;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.div__center__footer {
+    margin-right: 110px;
+}
+
+.div__right__footer{
+
+}
+
+.div__footer__redes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__redes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+
+    background-color: #31a20f;
+    color: white;
+    font-size: 1.30rem;
+
+    height: 42px;
+    width: 42px;
+    border-radius: 22px;
+
+    transition: 0.3s;
+}
+.footer__redes:hover{
+    font-size: 1.50rem;
+}
+
+.footer__AAC{
+    padding: 15px;
+}
+
+.footer__AAC__2{
+    color: rgb(198, 198, 198);
+    font-family: 'Quicksand', sans-serif;
+}
+
+.footer__AAC__3{
+    color: rgb(198, 198, 198);
+    font-family: 'Quicksand', sans-serif;
+
+    padding-top: 15px;
+}
+
+.footer__Copyright{
+    font-family: 'Quicksand', sans-serif;
+    color: rgb(198, 198, 198);
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.footer__Copyright__2{
+    padding-bottom: 10px;
+}
+
+.footer__redes__personales{
+    color: white;
+}
+
+
